# Turtlebot3-Navigation

./: README.md
follow_wall/: CMakeLists.txt  package.xml
follow_wall/launch/: main.launch
follow_wall/src/: find_nearest_wall.py  follow_wall.py  follow_wall_run.py  odom_record_action.py
follow_wall_cpp/: CMakeLists.txt  package.xml
follow_wall_cpp/launch/: main.launch
follow_wall_cpp/src/: find_nearest_wall.cpp  follow_wall_run.cpp  odom_record_action.cpp
navigation_stack_saved_spot/my_turtlebot_localization/: CMakeLists.txt  package.xml
navigation_stack_saved_spot/my_turtlebot_localization/config/: spots.yaml
navigation_stack_saved_spot/my_turtlebot_localization/launch/: amcl_project.launch
navigation_stack_saved_spot/my_turtlebot_localization/src/: spots_to_file.py
navigation_stack_saved_spot/my_turtlebot_mapping/: CMakeLists.txt  package.xml
navigation_stack_saved_spot/my_turtlebot_mapping/launch/: gmapping_launch.launch  map_project.launch
navigation_stack_saved_spot/my_turtlebot_mapping/maps/: project_main_map.pgm  project_main_map.yaml  project_main_mapp.pgm  project_main_mapp.yaml  project_map.pgm
navigation_stack_saved_spot/my_turtlebot_navigation/: CMakeLists.txt  package.xml
navigation_stack_saved_spot/my_turtlebot_navigation/launch/: my_project.launch  my_project_cpp.launch
navigation_stack_saved_spot/my_turtlebot_navigation/src/: get_coordinates_service_server.cpp  get_coordinates_service_server.py  send_coordinates_action_client.cpp  send_coordinates_action_client.py
navigation_stack_saved_spot/my_turtlebot_navigation/srv/: MyCustomServiceMessage.srv
navigation_stack_saved_spot/my_turtlebot_path_planning/: CMakeLists.txt  package.xml
navigation_stack_saved_spot/my_turtlebot_path_planning/launch/: move_base_project.launch
navigation_stack_saved_spot/my_turtlebot_path_planning/params/: costmap_common_params.yaml  move_base_params.yaml
navigation_stack_saved_spot/rrt_connect_path_planning/: CMakeLists.txt  package.xml
navigation_stack_saved_spot/rrt_connect_path_planning/config/: costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml
navigation_stack_saved_spot/rrt_connect_path_planning/launch/: main.launch  move_base.launch
navigation_stack_saved_spot/rrt_connect_path_planning/src/: bresenham.py  rrt_connect.py  rrt_connect_plan_server.py
navigation_stack_saved_spot/rrt_rope_path_planning/: CMakeLists.txt  package.xml
navigation_stack_saved_spot/rrt_rope_path_planning/config/: global_costmap_params.yaml  move_base_params.yaml
navigation_stack_saved_spot/rrt_rope_path_planning/launch/: main.launch  move_base.launch
navigation_stack_saved_spot/rrt_rope_path_planning/src/: bresenham.py  rrt_rope.py  rrt_rope_plan_server.py
navigation_stack_saved_spot/rviz_config/: complete.rviz
simulation_env/: CMakeLists.txt  package.xml
simulation_env/launch/: main.launch  racetrack.launch
simulation_env/models/ring_road_v2/meshes/: ring_v2.dae
simulation_env/worlds/: racetrack.world
